<resources>
    <string name="app_name">Foodie</string>
    <string name="foodie" translatable="false">FOODIE</string>
    <string name="splash_screen_logo">splash screen logo</string>
    <string-array name="servings">
        <item>12</item>
        <item>3</item>
        <item>4</item>
        <item>4</item>
        <item>6</item>
        <item>2–3</item>
        <item>4</item>
        <item>6</item>
        <item>4</item>
        <item>8</item>
        <item>3–4</item>
        <item>8</item>
    </string-array>
    <string name="servings_detail">%1$s servings</string>
    <string name="share_detail">%1$s \nIngredients:\n%2$s \n\nInstructions:\n%3$s</string>
    <string name="detailFood">%1$s</string>
    <string name="time">time</string>
    <string name="name">name</string>
    <string name="foodImage">foodImage</string>
    <string name="ingredientsText">ingredientsText</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="foodname">foodName</string>
    <string name="_4_person">4 person</string>
    <string name="_30_minutes">30 Minutes</string>
    <string name="profile">Profile</string>
    <string name="_260_calories">260 Calories</string>
    <string name="instructionsText">instructionsText\n</string>
    <string name="profile_picture">profile picture</string>
    <string name="separator">separator</string>
    <string name="cooking_time">Cooking Time</string>
    <string name="share">Share</string>
    <string name="nama" translatable="false">nama</string>
    <string name="email" translatable="false">email</string>
    <string name="clock_icon">clock_icon</string>
    <string name="person_icon">person icon</string>
    <string name="calories_icon">calories icon</string>
    <string name="about">About Profile</string>
    <string-array name="data_name">
        <item>Lasagna</item>
        <item>Vegetarian Bibimbap</item>
        <item>Miso Soup</item>
        <item>Fried Rice</item>
        <item>Chicken Satay</item>
        <item>Japchae</item>
        <item>Chicken Katsu</item>
        <item>Ketoprak</item>
        <item>Spaghetti Aglio Olio</item>
        <item>Bakso</item>
        <item>Beef Bulgogi</item>
        <item>Sushi</item>
    </string-array>
    <string-array name="cook_time">
        <item>180 mins</item>
        <item>60 mins</item>
        <item>30 mins</item>
        <item>40 mins</item>
        <item>40 mins</item>
        <item>60 mins</item>
        <item>45 mins</item>
        <item>30 mins</item>
        <item>45 mins</item>
        <item>90 mins</item>
        <item>90 mins</item>
        <item>45 mins</item>
    </string-array>
    <string-array name="data_ingredients">
        <item>
            -	1 pound sweet Italian sausage
            \n-	¾ pound lean ground beef
            \n-	½ cup minced onion
            \n-	2 cloves garlic, crushed
            \n-	1 (28 ounce) can crushed tomatoes
            \n-	2 (6.5 ounce) cans canned tomato sauce
            \n-	½ cup water
            \n-	2 tablespoons white sugar
            \n-	2 (6 ounce) cans tomato paste
            \n-	4 tablespoons chopped parsley, divided
            \n-	1 ½ teaspoons dried basil leaves
            \n-	1 ½ teaspoons salt, divided, or to taste
            \n-	1 teaspoon Italian seasoning
            \n-	½ teaspoon fennel seeds
            \n-	¼ teaspoon ground black pepper
            \n-	12 lasagna noodles
            \n-	16 ounces ricotta cheese
            \n-	1 egg
            \n-	¾ pound mozzarella cheese, sliced
            \n-	¾ cup grated Parmesan cheese
        </item>

        <item>
            -	2 tablespoons sesame oil
            \n-	1 cup carrot matchsticks
            \n-	1 cup zucchini matchsticks
            \n-	½ (14 ounce) can bean sprouts, drained
            \n-	6 ounces canned bamboo shoots, drained
            \n-	1 (4.5 ounce) can sliced mushrooms, drained
            \n-	⅛ teaspoon salt to taste
            \n-	2 cups cooked and cooled rice
            \n-	⅓ cup sliced green onions
            \n-	2 tablespoons soy sauce
            \n-	¼ teaspoon ground black pepper
            \n-	1 tablespoon butter
            \n-	3 eggs
            \n-	3 teaspoons sweet red chili sauce, or to taste
        </item>

        <item>
            -	4 cups water
            \n-	2 teaspoons dashi granules
            \n-	3 tablespoons miso paste
            \n-	1 (8 ounce) package silken tofu, diced
            \n-	2 green onions, sliced diagonally into 1/2 inch pieces
        </item>


        <item>
            -	3 large eggs, beaten
            \n-	1 tablespoon vegetable oil
            \n-	1 onion, chopped
            \n-	1 leek, chopped
            \n-	2 green chile peppers, chopped
            \n-	1 clove garlic, minced
            \n-	½ pound skinless, boneless chicken breasts, cut into thin strips
            \n-	½ pound peeled and deveined shrimp
            \n-	1 teaspoon ground coriander
            \n-	1 teaspoon ground cumin
            \n-	3 cups cold cooked white rice
            \n-	3 tablespoons kecap manis (sweet soy sauce)
        </item>

        <item>
            -	¼ cup coconut milk
            \n-	2 tablespoons reduced sodium soy sauce
            \n-	2 ½ teaspoons yellow curry powder
            \n-	1 ½ teaspoons turmeric
            \n-	3 cloves garlic, minced
            \n-	1 tablespoon freshly grated ginger
            \n-	1 tablespoon brown sugar
            \n-	1 tablespoon fish sauce
            \n-	2 pounds boneless, skinless chicken thighs, cut into 1-inch chunks
            \n-	1 tablespoon canola oil
            \n-	Kosher salt and freshly ground black pepper, to taste
            \nFOR THE PEANUT SAUCE
            \n-	3 tablespoons creamy peanut butter
            \n-	1 tablespoon reduced sodium soy sauce
            \n-	1 tablespoon freshly squeezed lime juice
            \n-	2 teaspoons brown sugar
            \n-	2 teaspoons chili garlic sauce, or more
            \n-	1 teaspoon freshly grated ginger
        </item>

        <item>
            -	½ pound Korean dang myun noodles
            \n-	2 ½ teaspoons sesame oil, divided
            \n-	2 tablespoons soy sauce
            \n-	2 teaspoons white sugar
            \n-	1 tablespoon vegetable oil
            \n-	2 carrots, cut into match-stick size pieces
            \n-	½ pound asparagus, thinly sliced
            \n-	¾ cup thinly sliced onions
            \n-	2 cloves garlic, minced
            \n-	3 green onions cut into 1-inch pieces
            \n-	½ cup dried shiitake mushrooms, soaked until soft, then sliced into strips
            \n-   1 tablespoon sesame seeds
        </item>

        <item>
            -   1 pound boneless, skinless chicken breasts, pounded thin
            \n-   1 cup all-purpose flour
            \n-   1/2 cup panko bread crumbs
            \n-   1 egg, beaten
            \n-   1 tablespoon soy sauce
            \n-   1 tablespoon sesame oil
            \n-   1 tablespoon ground ginger
            \n-   1 teaspoon garlic powder
            \n-   1/4 teaspoon salt
            \n-   1/4 teaspoon black pepper
        </item>

        <item>
            -   10 ounces dried bean sprouts, rinsed and drained
            \n-   1 cucumber, peeled, seeded, and diced
            \n-   1/2 cup chopped peanuts, roasted and salted
            \n-   1/4 cup chopped green onions
            \n-   1/4 cup kecap manis (sweet soy sauce)
            \n-   1/4 cup sambal kacang (peanut sauce)
            \n-   2 hard-boiled eggs, sliced
            \n-   1/4 cup chopped fried shallots
            \n-   1/4 teaspoon salt
            \n-   1/4 teaspoon black pepper
        </item>

        <item>
            -   1 pound spaghetti
            \n-   1/4 cup extra-virgin olive oil
            \n-   4 cloves garlic, minced
            \n-   1/2 teaspoon red pepper flakes (optional)
            \n-   1/4 cup chopped fresh parsley
            \n-   Salt and pepper to taste
        </item>

        <item>
            -   500 grams ground beef (5% fat)
            \n-   1 egg
            \n-   5 cloves garlic, minced
            \n-   2 tablespoons tapioca flour
            \n-   1 tablespoon salt
            \n-   1/2 teaspoon white pepper
            \n-   1/4 teaspoon baking powder
            \n-   Water, as needed
        </item>

        <item>
            -	5 tablespoons soy sauce
            \n-	¼ cup chopped green onion
            \n-	2 ½ tablespoons white sugar
            \n-	2 tablespoons minced garlic
            \n-	2 tablespoons sesame seeds
            \n-	2 tablespoons sesame oil
            \n-	½ teaspoon ground black pepper
            \n-	1 pound flank steak, thinly sliced
        </item>

        <item>
            -   1 cup short-grain rice
            \n-   2 cups water
            \n-   2 tablespoons rice vinegar
            \n-   1 tablespoon sugar
            \n-   1 teaspoon salt
            \n-   2 sheets nori, cut into 8 equal strips
            \n-   1 avocado, peeled, pitted, and sliced
            \n-   1 cucumber, peeled and sliced
            \n-   1/2 cup cooked salmon, chopped
            \n-   1/4 cup mayonnaise
            \n-   1/4 teaspoon wasabi paste
            \n-   1/4 cup pickled ginger
        </item>

    </string-array>
</resources>